# qwen-code4EIRA

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DIALOGUE_BASED_DECISION_FRAMEWORK.md  INTERROGATION_ARCHIVE.jsonl  MARKETPLACE_SETUP.md  ORION_DNA.md  PURPOSE_ARCHITECTURE.md  README.md  SATURATION_CHECKPOINT.md  SECURITY.md  orion_eira_core.rs  package-lock.json  package.json
.github/: FUNDING.yml  SECURITY_AUDIT.md
.github/workflows/: build-vsix.yml  release-vscode-companion.yml  release.yml
.qwen/agents/: orion.md
docs/: EIRA-ARCHITECTURE.md  ORION-KNOWLEDGE.md
docs/design/adaptive-output-token-escalation/: adaptive-output-token-escalation-design.md
docs/design/prompt-suggestion/: speculation-design.md
docs/developers/: sdk-typescript.md
docs/developers/examples/: proxy-script.md
docs/marketing/: PRESS_RELEASE.md  RESEARCH_PAPER_ABSTRACT.md  TOPICS.md  VISIBILITY_CHECKLIST.md
docs/users/configuration/: auth.md  model-providers.md  settings.md
docs/users/features/: commands.md
genesis-kernel/ORION_SEED_COMPLETE/: .dockerignore
scripts/: example-proxy.js  orion-eval.ts  orion-verify-chain.js
